damaris (0.10-2) experimental; urgency=low

  * damaris-modules package contains various modules for testing and stable
  * damaris-modules package has exact dependencies for supported kernel versions

 -- Achim Gaedke <achim@dilbert.fkp.physik.tu-darmstadt.de>  Wed, 17 Oct 2007 13:47:44 +0200

damaris (0.10-1) experimental; urgency=low

  [ Achim Gaedke ]
  * check maximum number of instructions in backend and report proper
    error

  [ Christian Tacke ]
  * Bump main version to 0.10
  * Build-Depend on linux-headers-2.6-all | linux-headers-2.6.18-5-all
    to really get headers for all subarchs
  * No need to Build-Depend on g++,make,dpkg-dev as build-essential
    depends on them

 -- Christian Tacke <Christian.Tacke@physik.tu-darmstadt.de>  Thu,  4 Oct 2007 17:51:42 +0200

damaris (0.9-0.5.2) experimental; urgency=low

  * python-gui: separate package in frontends/greendamaris

 -- Achim Gaedke <Achim.Gaedke@physik.tu-darmstadt.de>  Thu, 06 Sep 2007 11:35:09 +0200

damaris (0.9-0.5.1) experimental; urgency=low

  * Split kernel modules into new damaris-modules package,
    in preparation for per kernelversion packages
  * Fix depedencies of damaris-backends
  * Add Mobile_wo_sync_backend

 -- Christian Tacke <Christian.Tacke@physik.tu-darmstadt.de>  Fri, 31 Aug 2007 11:15:38 +0200

damaris (0.9-0.5) experimental; urgency=low

  * python-gui: directory creation for dump files
  * python-gui: release of backend subprocess

 -- Achim Gaedke <Achim.Gaedke@physik.tu-darmstadt.de>  Fri, 17 Aug 2007 11:46:08 +0200

damaris (0.9-0.4) experimental; urgency=low

  * python-gui: DAMARIS version information
  * python-gui: correct matplotlib choice and recognition
  * python-gui: counter for results produced by backend
  * python-gui: clean up of internal counters and start/stop mechanisms
  * drivres: pulseblaster-module directory removed with cleanup
  * python-gui: disable hdf file generation by empty data pool filename
